--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     </nav>
     <div class="container">
         <div class="starter-template">
-            <h1>タイトル</h1>
+            <h1>Portfolio</h1>
             <p class="lead">世界の皆さん、こんにちは。</p>
             <h2 id="works">Works</h2>
-            <p>説明文：あいうえおあいうえおあいうえお</p>
+            <p>操作説明：キーボード、十字キー</p>
             <hr>
             <h2 id="skills">Skills</h2>
-            <p>説明文：あいうえおあいうえおあいうえお</p>
+            <p>使用言語：C/C++</p>
             <div class="row starter-template">
             <a class="btn btn-primary" href="#">Topに戻る</a>
         </div>
